--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -5,6 +5,7 @@ html {
 body {
     /* navbar */
     padding-top: 70px;
+    padding-right: 0 !important;
 }
 
 .table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
