--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -73,3 +73,11 @@ body {
 .carousel-inner > .item > img {
     margin: 0 auto;
 }
+
+.vertical-center {
+    min-height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
