More mobile responsive in vote list page

--- a/public/css/no-more-table.css
+++ b/public/css/no-more-table.css
@@ -16,6 +16,10 @@ only screen and (max-width: 479px) {
         border: 1px solid #ccc;
     }
 
+    .noMoreTable tr.classData td.hidePhone {
+        display: none;
+    }
+
     .noMoreTable tr:not(.classData) {
         display: none;
     }
