--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -90,3 +90,11 @@ body {
     justify-content: center;
     flex-direction: column;
 }
+
+@media
+only screen and (max-width: 479px) {
+    .container-fluid {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+}
