--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -6,7 +6,7 @@ body {
     /* navbar */
     padding-top: 70px;
     padding-right: 0 !important;
-    background: #eeeeee url("../pic/squirrel.jpg") no-repeat fixed center center;
+    background: #eeeeee url('/pic/squirrel.jpg') no-repeat fixed center center;
     background-size: cover;
 }
 
