--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -10,6 +10,13 @@ body {
     background-size: cover;
 }
 
+@media
+only screen and (max-width: 479px) {
+    body {
+        background: #eeeeee url('../pic/squirrel_mobile.jpg') no-repeat fixed;
+    }
+}
+
 .container-background {
     background: rgba(250, 250, 250, 0.8);
     border-radius: 6px;
