--- a/public/css/sticky-footer-navbar.css
+++ b/public/css/sticky-footer-navbar.css
@@ -7,7 +7,7 @@ html {
 
 body {
     /* Margin bottom by footer height */
-    margin-bottom: 68px;
+    margin-bottom: 83px; /* 68 + 15*/
 }
 
 .footer {
@@ -19,23 +19,13 @@ body {
     background-color: #f5f5f5;
 }
 
-/* Custom page CSS
--------------------------------------------------- */
-/* Not required for template or sticky footer method. */
-
-body > .container {
-    padding: 30px 15px 0;
-}
-
-.container .text-muted {
-    margin-left: 15px;
-    margin-right: 15px;
-}
-
 .footer > .container {
-    padding-right: 15px;
-    padding-left: 15px;
     padding-top: 10px;
+}
+
+.footer > .container > p {
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 code {
