--- a/public/css/ribbon.css
+++ b/public/css/ribbon.css
@@ -52,3 +52,7 @@
     border-bottom-color: transparent;
     border-left-color: transparent;
 }
+
+.ribbon-gray span {
+    background: linear-gradient(#B6BAC9 0%, #808080 100%);
+}
