--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -101,3 +101,7 @@ only screen and (max-width: 479px) {
 input[type='checkbox'] {
     cursor: pointer;
 }
+
+blockquote p a {
+    word-break: break-all;
+}
