--- a/public/css/ribbon.css
+++ b/public/css/ribbon.css
@@ -33,7 +33,7 @@
 .ribbon.ribbon-gold span, .ribbon.ribbon-silver span, .ribbon.ribbon-bronze span {
     font-size: 25px;
     text-shadow: 0 0 1px #dd0303, 0 0 1px #dd0303, 0 0 1px #dd0303, 0 0 1px #dd0303, 0 0 1px #dd0303, 0 0 1px #dd0303, 0 2px 5px #7d7d7d,
-    0 0 0 rgb(218, 218, 218), -1px 0 0 rgb(203, 203, 203), -2px 0 0 rgb(187, 187, 187), -3px 0 0 rgb(172, 172, 172), -4px 0 0 rgb(156, 156, 156), -5px 0 0 rgb(140, 140, 140), -6px 0 5px rgba(0, 0, 0, 0.5), -6px 0 1px rgba(0, 0, 0, 0.5);
+    0 0 0 rgb(218, 218, 218), 0 1px 0 rgb(203, 203, 203), 0 2px 0 rgb(187, 187, 187), 0 3px 0 rgb(172, 172, 172), 0 4px 0 rgb(156, 156, 156), 0 5px 0 rgb(140, 140, 140), 0 6px 5px rgba(0, 0, 0, 0.5), 0 6px 1px rgba(0, 0, 0, 0.5);
 }
 
 .ribbon.ribbon-gold span {
